--- a/src/index.css
+++ b/src/index.css
@@ -105,7 +105,7 @@ body {
 .candidate {
   font-size: clamp(11px, 2vw, 14px); 
   font-weight: 400; 
-  color: #9a9a9ad0; 
+  color: #716c6c; 
   display: flex;
   justify-content: center;
   align-items: center;
